# bzlmod-oci-update-test

./: MODULE.bazel  README.md
